# Reversio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Hex.cpp  Hex.h  README.md  main.cpp
src/: CMakeLists.txt  hex.cpp  hex.h  layout.h  main.cpp  nof.h  orientation.cpp  orientation.h  point.h
src/base/: CMakeLists.txt  hex.h  layout.h  nof.h  orientation.cpp  orientation.h  orientation.hpp  point.h  poly.h  polymap.h
src/testing/: CMakeLists.txt  test_hex.cpp  test_main.cpp  test_nof.cpp
test/: CMakeLists.txt  test_hex.cpp  test_main.cpp
